Changed progress structure